# MBA-TCC

./: .gitignore
Documents/Implementation/: CMakeLists.txt  Dockerfile  docker-compose.yml
Documents/Implementation/scrits/: run_dev.sh
Documents/Projeto de pesquisa/: Projeto de Pesquisa.docx
Implementation/: .clang-format  .dockerignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
Implementation/docker/: dev.Dockerfile  observability.Dockerfile  prod.Dockerfile
Implementation/includes/api/v1/: GeneralInfo.h
Implementation/observability/: main.py
Implementation/observability/configs/: logging_config.py  variables.py
Implementation/observability/test_api/GeneralInfoTests/: test_GeneraAPIServerInfo.py
Implementation/observability/test_api/ProcessSourceFiles/: test_ProcessSourceFiles.py
Implementation/scripts/: build_and_run.sh
Implementation/src/: env_loader.h  main.cpp
Implementation/src/Logger/: Log.cpp  Log.h
Implementation/src/ProcessSourceFiles/: DownloadFiles.cpp  DownloadFiles.h  FolderGraph.cpp  FolderGraph.h  IProcessFiles.h  IScanner.h  ProcessFiles.cpp  ProcessFiles.h  RepoURLFactory.cpp  RepoURLFactory.h  ScannerForConditionMatch.cpp  ScannerForConditionMatch.h
Implementation/src/ProcessSourceFiles/util/: GitHubUrl.cpp  GitHubUrl.h  GitHubUrlAPI.cpp  GitHubUrlAPI.h  HttpClient.cpp  HttpClient.h  IHttpClient.h  IRepoURL.h  ISourceReader.h  SourceReaderAsString.cpp  SourceReaderAsString.h
Implementation/src/api/v1/: GeneralInfo.h  ProcessSourceFiles.h
Implementation/src/utils/: inlineFreeFunctions.h
Implementation/temp/Implementation/observability/source_code_for_testing/ProcessSourceFiles/SimpleSorceExampleForReaderTests/: main.cpp
Implementation/unitTests/: log_test.cpp
Implementation/unitTests/Logger/: log_test.cpp
Implementation/unitTests/ProcessSourceFiles/: DownloadFiles_test.cpp  FolderGraph_test.cpp  ProcessFiles_test.cpp  ScannerForConditionMatch_test.cpp
Implementation/unitTests/ProcessSourceFiles/util/: RepoURL_test.cpp  SourceReaderAsString_test.cpp
Implementation/unitTests/utils/: inlineFreeFunctions_test.cpp
